--- a/nacos_springboot/nacos_springboot_consumer_order/src/main/resources/application.properties
+++ b/nacos_springboot/nacos_springboot_consumer_order/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8081
+server.servlet.context-path=/order
 spring.application.name=order_service
 nacos.discovery.server-addr=127.0.0.1:8848
