--- a/nacos_springboot/nacos_springboot_producer_user/pom.xml
+++ b/nacos_springboot/nacos_springboot_producer_user/pom.xml
@@ -27,5 +27,15 @@
             <groupId>com.alibaba.boot</groupId>
             <artifactId>nacos-discovery-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-discovery-spring-boot-actuator</artifactId>
+        </dependency>
     </dependencies>
 </project>
