--- a/nacos_springboot/nacos_springboot_producer_user/src/main/resources/application.properties
+++ b/nacos_springboot/nacos_springboot_producer_user/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8082
+server.servlet.context-path=/user
 spring.application.name=user_service
+nacos.config.server-addr=127.0.0.1:8848
 nacos.discovery.server-addr=127.0.0.1:8848
