--- a/nacos_springboot/pom.xml
+++ b/nacos_springboot/pom.xml
@@ -37,6 +37,18 @@
                 <artifactId>nacos-discovery-spring-boot-starter</artifactId>
                 <version>0.2.1</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>nacos-config-spring-boot-actuator</artifactId>
+                <version>0.2.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>nacos-discovery-spring-boot-actuator</artifactId>
+                <version>0.2.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
