--- a/nacos_springcloud/nacos_springcloud_consumer_oder/pom.xml
+++ b/nacos_springcloud/nacos_springcloud_consumer_oder/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>RELEASE</version>
+            <version>0.2.1.RELEASE</version>
         </dependency>
     </dependencies>
 
