--- a/nacos_springcloud/nacos_springcloud_producer_user/pom.xml
+++ b/nacos_springcloud/nacos_springcloud_producer_user/pom.xml
@@ -20,13 +20,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>RELEASE</version>
+            <version>0.2.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-            <version>RELEASE</version>
+            <version>0.2.1.RELEASE</version>
         </dependency>
     </dependencies>
 
